--- a/themes/hugo-cactus-theme/layouts/partials/social.html
+++ b/themes/hugo-cactus-theme/layouts/partials/social.html
@@ -14,6 +14,10 @@
             <a class="symbol" href="mailto:{{ $val }}">
                 {{ $iconStyle }}{{ $key }}
             </a>
+        {{else if eq $key "github"}}
+            <a class="symbol" href="{{ $val }}">
+                {{ $iconStyle }}githubalt
+            </a>
         {{else}}
             <a class="symbol" href="{{ $val }}">
                 {{ $iconStyle }}{{ $key }}
