--- a/themes/hugo-cactus-theme/layouts/partials/head.html
+++ b/themes/hugo-cactus-theme/layouts/partials/head.html
@@ -11,11 +11,7 @@
 <link rel="stylesheet" href="{{ . | absURL }}">
 {{ end }}
 
-{{ if eq .Site.Params.iconFont "font-awesome" }}
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
-{{ else }}
-<link rel="stylesheet" href="{{ "css/monosocialiconsfont.css" | absURL }}">
-{{ end }}
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
 
 {{ if .Site.Params.enableRSS }}
 <link href="{{ .Site.RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
