--- a/themes/hugo-cactus-theme/layouts/partials/social.html
+++ b/themes/hugo-cactus-theme/layouts/partials/social.html
@@ -1,29 +1,17 @@
 <div id="social">
-{{ if eq .Site.Params.iconFont "font-awesome" }}
-	
-	{{ range $key, $val := .Site.Social }}
-    <a class="symbol" href="{{ $val }}">
-        <i class="fa fa-{{ $key }}"></i>
-    </a>
-    {{ end }}
-
-{{ else }}
-	{{ $iconStyle := .Site.Params.socialIconStyle }}
-    {{ range $key, $val := .Site.Social }}
-        {{if eq $key "email"}}
-            <a class="symbol" href="mailto:{{ $val }}">
-                {{ $iconStyle }}{{ $key }}
-            </a>
-        {{else if eq $key "github"}}
-            <a class="symbol" href="{{ $val }}">
-                {{ $iconStyle }}githubalt
-            </a>
-        {{else}}
-            <a class="symbol" href="{{ $val }}">
-                {{ $iconStyle }}{{ $key }}
-            </a>
-        {{end}}
-    {{ end }}
-
+{{ range $key, $val := .Site.Social }}
+	{{if eq $key "email"}}
+		<a class="symbol" href="mailto:{{ $val }}">
+			<i class="fas fa-envelope"></i>
+		</a>
+	{{ else if eq $key "mastodon" }}
+		<a class="symbol" rel="me" href="https://{{ $val }}">
+			<i class="fab fa-{{ $key }}"></i>
+		</a>
+	{{else}}
+		<a class="symbol" href="{{ $val }}">
+			<i class="fab fa-{{ $key }}"></i>
+		</a>
+	{{ end }}
 {{ end }}
 </div>
