--- a/themes/mini/layouts/_default/_markup/render-heading.html
+++ b/themes/mini/layouts/_default/_markup/render-heading.html
@@ -1,1 +1,1 @@
-<h{{ .Level }} id="{{ .Anchor | safeURL }}">{{ .Text | safeHTML }} <a href="#{{ .Anchor | safeURL }}" class="anchor">🔗</a></h{{ .Level }}>
+<h{{ .Level }} id="{{ .Anchor | safeURL }}">{{ .Text | safeHTML }} <a href="#{{ .Anchor | safeURL }}" class="anchor"> {{ partial "svgs/link.svg" (dict "fill" "#444444" "width" 16 "height" 16 ) }} </a></h{{ .Level }}>
