--- a/themes/mini/layouts/_default/_markup/render-link.html
+++ b/themes/mini/layouts/_default/_markup/render-link.html
@@ -1,1 +1,6 @@
-<a href="{{ .Destination | safeURL }}"{{ with .Title}} title="{{ . }}" {{ end }}{{ if strings.HasPrefix .Destination "http" }} target="_blank" rel="noopener"{{ end }}>{{ .Text | safeHTML }}</a>
+<a href="{{ .Destination | safeURL }}"
+   target="_blank"
+   {{ with .Title}} title="{{ . }}" {{ end }}
+   {{ if strings.HasPrefix .Destination "http" }} rel="noopener"{{ end }}>
+    {{ .Text | safeHTML }}
+</a>
