--- a/themes/mini/static/css/style.css
+++ b/themes/mini/static/css/style.css
@@ -1,28 +1,36 @@
+:root {
+  --accent-color: #aa2434;
+  --accent-color-light: #ff5959;
+  --text-primary: #252525;
+  --text-secondary: #383838;
+  --background: #EEEEEE;
+  --background-secondary: #DADADC;
+  --separator: #999999;
+}
+
 body {
-  line-height: 1;
-  font: normal 15px/1.5em 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  color: #404040;
-  line-height: 1.75;
-  letter-spacing: 0.008em;
+  line-height: 1.5em;
+  font: normal 1.1em 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  color: var(--text-primary);
 }
 
 a {
   text-decoration: none;
-  color: #5badf0;
+  color: var(--accent-color);
 }
 
 a:hover {
-  color: #0366d6;
+  color: var(--accent-color-light);
 }
 
 /* markdown content styles */
 blockquote {
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin-top: 8px;
+  margin-bottom: 8px;
   padding-left: 1em;
   margin-left: 0px;
-  border-left: 3px solid #eee;
-  color: #757575;
+  border-left: 3px solid var(--text-secondary);
+  color: var(--text-secondary);
 }
 
 hr {
@@ -30,7 +38,7 @@ hr {
   border: none;
   height: 2px;
   margin: 40px auto;
-  background: #eee;
+  background: var(--background-secondary);
 }
 
 table {
@@ -47,29 +55,29 @@ th, td {
 }
 
 table td, td {
-  border-spacing: none;
   border-style: solid;
   padding: 10px 15px;
   border-width: 1px 0 0 0;
 }
+
 thead th, th {
   text-align: left;
   padding: 10px 15px;
   height: 20px;
   font-size: 13px;
   font-weight: bold;
-  color: #444;
+  color: var(--separator);
   cursor: default;
   white-space: nowrap;
-  border: 1px solid #dadadc;
+  border: 1px solid var(--background-secondary);
 }
 
 tr>td {
-  border: 1px solid #dadadc;
+  border: 1px solid var(--background-secondary);
 }
 
 tr:nth-child(odd)>td {
-  background: #fcfcfc;
+  background: var(--background);
 }
 
 h1,
@@ -77,28 +85,34 @@ h2,
 h3 {
   font-weight: 400;
 }
+
 p {
   margin-block-start: 1.5em;
   margin-block-end: 1.5em;
 }
+
 p,
 pre {
   word-break: normal;
   overflow-wrap: anywhere;
 }
+
 .markdown-image img {
   max-width: 100%;
 }
+
 .anchor {
   font-size: 100%;
   visibility: hidden;
 }
+
 h1:hover a,
 h2:hover a,
 h3:hover a,
 h4:hover a {
   visibility: visible
 }
+
 .highlight pre {
   padding: 7px;
   overflow-x: auto;
@@ -108,12 +122,13 @@ h4:hover a {
   max-width: 100%;
   overflow-x: auto;
 }
+
 p code {
   font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, Courier, monospace;
   font-size: inherit;
-  background-color: rgba(0, 0, 0, 0.06);
+  background-color: var(--background);
   padding: 0 2px;
-  border: 1px solid rgba(0, 0, 0, 0.08);
+  border: 1px solid var(--background-secondary);
   border-radius: 2px 2px;
   line-height: inherit;
   word-wrap: break-word;
@@ -123,13 +138,11 @@ pre code {
   font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, Courier, monospace;
 }
 
-
 /* navigation */
 
 nav.navigation {
   padding: 20px 20px 0;
-  background: #fff;
-  background: rgba(255, 255, 255, 0.9);
+  background: var(--background);
   margin: 0 auto;
   text-align: right;
   z-index: 100;
@@ -139,25 +152,26 @@ nav.navigation a {
   top: 8px;
   right: 6px;
   padding: 8px 12px;
-  color: #5badf0;
+  color: var(--accent-color-light);
   font-size: 13px;
   line-height: 1.35;
   border-radius: 3px;
 }
+
 nav.navigation a:hover {
-  color: #0366d6;
+  color: var(--accent-color);
 }
 
 nav.navigation a.button {
-  background: #5badf0;
-  color: #fff;
+  background: var(--accent-color-light);
+  color: var(--background);
   margin-left: 12px;
 }
+
 @media (max-width: 700px) {
   nav.navigation {
     padding: 20px 10px 0 0;
-    background: #fff;
-    background: rgba(255, 255, 255, 0.9);
+    background: var(--background);
     margin: 0 auto;
     text-align: right;
     z-index: 100;
@@ -166,7 +180,7 @@ nav.navigation a.button {
     top: 8px;
     right: 6px;
     padding: 8px 8px;
-    color: #5badf0;
+    color: var(--accent-color-light);
     font-size: 13px;
     line-height: 1.35;
     border-radius: 3px;
@@ -181,23 +195,26 @@ nav.navigation a.button {
 
 /* toc */
 .toc {
-  margin: auto;
-  background: #f8f8f8;
+  margin: 36px auto auto;
+  background: var(--background-secondary);
   border-radius: 0;
   padding: 10px 7px;
-  margin-top: 36px;
 }
+
 .toc details summary {
   cursor: zoom-in;
   margin-inline-start: 14px;
   font-weight: 500;
 }
+
 .toc details[open] summary {
   cursor: zoom-out;
 }
+
 .toc #TableOfContents {
   margin-left: 10px;
 }
+
 .toc ul {
   padding-inline-start: 24px;
 }
@@ -212,22 +229,26 @@ nav.navigation a.button {
   margin-top: 100px;
   margin-bottom: 100px;
   text-align: center;
-  color: #bbbbbb;
+  color: var(--text-secondary);
   font-size: 14px;
 }
+
 #footer .copyright {
   margin: 20px auto;
   font-size: 15px;
 }
+
 .powerby {
   margin: 20px auto;
   font-size: 13px;
 }
+
 #footer .split {
   cursor: pointer;
 }
+
 #footer .split:hover path {
-  fill: #ff3356;
+  fill: var(--accent-color);
   transition: 0.7s ease-out;
   cursor: pointer;;
 }
@@ -260,7 +281,7 @@ nav.navigation a.button {
   font-weight: 400;
   letter-spacing: 0px;
   font-size: 20px;
-  color: #404040;
+  color: var(--separator);
   margin-bottom: 0;
   margin-top: 0;
 }
@@ -268,7 +289,7 @@ nav.navigation a.button {
 .profile h2 {
   font-size: 20px;
   font-weight: 300;
-  color: #757575;
+  color: var(--separator);
   margin-top: 0;
 }
 
@@ -285,7 +306,7 @@ nav.navigation a.button {
 
 #list-page .title {
   display: inline-block;
-  color: #404040;
+  color: var(--separator);
   font-size: 20px;
   font-weight: 400;
   margin: 0;
@@ -298,7 +319,7 @@ nav.navigation a.button {
 }
 
 #list-page .title a:hover {
-  color: #0366d6;
+  color: var(--accent-color);
 }
 
 #list-page .date {
@@ -307,11 +328,11 @@ nav.navigation a.button {
   text-align: right;
   position: relative;
   top: 1px;
-  color: #bbb;
+  color: var(--accent-color);
 }
 
 #list-page .summary {
-  color: #757575;
+  color: var(--separator);
   margin-top: 12px;
   word-break: normal;
   overflow-wrap: anywhere;
@@ -321,7 +342,7 @@ nav.navigation a.button {
 #list-page .cover {
   width: 100px;
   height: 100px;
-  background: #fff;
+  background: var(--background);
 }
 
 #list-page .cover img {
@@ -333,12 +354,12 @@ nav.navigation a.button {
   margin: 48px 0;
   width: 100%;
   height: 32px;
-  margin-top: 48px;
 }
 
 #list-page .pagination .pre {
   float: left;
 }
+
 #list-page .pagination .next {
   float: right;
 }
@@ -362,6 +383,7 @@ nav.navigation a.button {
     padding: 0 18px;
     margin: 20px auto 0 auto;
   }
+
   #single .title {
     font-size: 24px;
     line-height: 32px;
@@ -370,10 +392,11 @@ nav.navigation a.button {
 
 #single .tip {
   text-align: center;
-  color: #8c8c8c;
+  color: var(--separator);
   margin-top: 18px;
   font-size: 14px;
 }
+
 #single .tip .split {
   margin: 0 4px;
 }
@@ -385,17 +408,18 @@ nav.navigation a.button {
 #single .tags {
   margin-top: 24px;
 }
+
 #single .tags a {
-  background: #f2f2f2;
+  background: var(--background);
   padding: 4px 7px;
-  color: #757575;
+  color: var(--separator);
   font-size: 14px;
   margin-right: 3px;
 }
-#single .tags a:hover {
-  color: #0366d6;
-}
 
+#single .tags a:hover {
+  color: var(--accent-color-light);
+}
 
 #archive {
   max-width: 580px;
@@ -410,42 +434,51 @@ nav.navigation a.button {
 #archive .group {
   margin: 24px auto;
 }
+
 #archive .group .key {
   font-size: 20px;
   margin-bottom: 12px;
 }
+
 #archive .group .value {
   display: block;
   font-size: 16px;
   margin-bottom: 12px;
 }
+
 #archive .group .value .date {
   display: inline-block;
-  color: #999;
+  color: var(--text-secondary);
   min-width: 60px;
 }
+
 #archive .group .value .title {
   display: inline;
 }
+
 #archive .group .value .title a {
-  color:#404040;
+  color: var(--text-primary);
 }
+
 #archive .group .value .title a:hover {
-  color: #0366d6;
+  color: var(--accent-color-light);
 }
+
 #archive .group .value .tags {
   display: inline;
   margin-left: 7px;
 }
+
 #archive .group .value .tags a {
-  background: #f2f2f2;
+  background: var(--background);
   padding: 4px 7px;
-  color: #999;
+  color: var(--text-secondary);
   font-size: 14px;
   margin-right: 3px;
 }
+
 #archive .group .value .tags a:hover {
-  color: #0366d6;
+  color: var(--accent-color-light);
 }
 
 /* taxonomy */
@@ -455,10 +488,12 @@ nav.navigation a.button {
   padding: 0 12px;
   text-align: center;
 }
+
 #tags .tag {
   display: inline-block;
   margin: 7px 7px;
 }
+
 @media (max-width: 700px) {
   #tags {
     margin: 0 auto 0 auto;
@@ -470,15 +505,15 @@ nav.navigation a.button {
 }
 
 #tags .tag a {
-  background: #f2f2f2;
+  background: var(--background-secondary);
   padding: 4px 7px;
-  color: #757575;
-  color: #404040;
+  color: var(--accent-color-light);
   font-size: 14px;
   margin-right: 3px;
 }
+
 #tags .tag a:hover {
-  color: #0366d6;
+  color: var(--accent-color-light);
 }
 
 /* section page */
@@ -494,6 +529,7 @@ nav.navigation a.button {
   margin: 0 auto;
   padding: 0 24px;
 }
+
 #page-404 .item {
   margin: 12px 0 0 0;
 }
@@ -525,5 +561,5 @@ nav.navigation a.button {
   text-align: right;
   position: relative;
   top: 1px;
-  color: #bbb;
+  color: var(--background);
 }
