--- a/themes/mini/layouts/partials/navigation.html
+++ b/themes/mini/layouts/partials/navigation.html
@@ -1,7 +1,7 @@
 <nav class="navigation">
 	{{ if not .IsHome }}
 		<a href="{{ "/" | relURL }}">
-      <span class="arrow">←</span>{{ with .Site.Params.home }}{{ . }}{{ else }}{{ i18n "home" }}{{ end }}
+      {{ with .Site.Params.home }}{{ . }}{{ else }}{{ i18n "home" }}{{ end }}
     </a>
 	{{ end }}
 	<a href="{{ "/posts" | relURL }}">{{ with .Site.Params.archive }}{{ . }}{{ else }}{{ i18n "archive" }}{{ end }}</a>
