--- a/themes/mini/static/css/style.css
+++ b/themes/mini/static/css/style.css
@@ -4,14 +4,15 @@
   --text-primary: #252525;
   --text-secondary: #383838;
   --background: #EEEEEE;
-  --background-secondary: #DADADC;
-  --separator: #999999;
+  --background-secondary: #EAEAEA;
+  --border: #999999;
 }
 
 body {
   line-height: 1.5em;
   font: normal 1.1em 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: var(--text-primary);
+  background: var(--background);
 }
 
 a {
@@ -25,20 +26,10 @@ a:hover {
 
 /* markdown content styles */
 blockquote {
-  margin-top: 8px;
-  margin-bottom: 8px;
   padding-left: 1em;
-  margin-left: 0px;
+  margin-left: 0;
   border-left: 3px solid var(--text-secondary);
   color: var(--text-secondary);
-}
-
-hr {
-  display: block;
-  border: none;
-  height: 2px;
-  margin: 40px auto;
-  background: var(--background-secondary);
 }
 
 table {
@@ -50,7 +41,7 @@ table {
 
 th, td {
   text-align: left;
-  padding-right: 20px;
+  padding-right: 40px;
   vertical-align: top;
 }
 
@@ -66,7 +57,7 @@ thead th, th {
   height: 20px;
   font-size: 13px;
   font-weight: bold;
-  color: var(--separator);
+  color: var(--border);
   cursor: default;
   white-space: nowrap;
   border: 1px solid var(--background-secondary);
@@ -126,14 +117,15 @@ h4:hover a {
 p code {
   font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, Courier, monospace;
   font-size: inherit;
-  background-color: var(--background);
+  background-color: var(--background-secondary);
   padding: 0 2px;
-  border: 1px solid var(--background-secondary);
+  border: 1px solid var(--border);
   border-radius: 2px 2px;
   line-height: inherit;
   word-wrap: break-word;
   text-indent: 0;
 }
+
 pre code {
   font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, Courier, monospace;
 }
@@ -143,14 +135,10 @@ pre code {
 nav.navigation {
   padding: 20px 20px 0;
   background: var(--background);
-  margin: 0 auto;
   text-align: right;
-  z-index: 100;
 }
 
 nav.navigation a {
-  top: 8px;
-  right: 6px;
   padding: 8px 12px;
   color: var(--accent-color-light);
   font-size: 13px;
@@ -171,57 +159,12 @@ nav.navigation a.button {
 @media (max-width: 700px) {
   nav.navigation {
     padding: 20px 10px 0 0;
-    background: var(--background);
     margin: 0 auto;
-    text-align: right;
-    z-index: 100;
   }
+
   nav.navigation a {
-    top: 8px;
-    right: 6px;
     padding: 8px 8px;
-    color: var(--accent-color-light);
-    font-size: 13px;
-    line-height: 1.35;
-    border-radius: 3px;
   }
-}
-
-@media (max-width: 324px) {
-  nav.navigation a.button {
-    display: none;
-  }
-}
-
-/* toc */
-.toc {
-  margin: 36px auto auto;
-  background: var(--background-secondary);
-  border-radius: 0;
-  padding: 10px 7px;
-}
-
-.toc details summary {
-  cursor: zoom-in;
-  margin-inline-start: 14px;
-  font-weight: 500;
-}
-
-.toc details[open] summary {
-  cursor: zoom-out;
-}
-
-.toc #TableOfContents {
-  margin-left: 10px;
-}
-
-.toc ul {
-  padding-inline-start: 24px;
-}
-
-/* comment */
-#comment {
-  margin-top: 64px;
 }
 
 /* footer */
@@ -238,11 +181,6 @@ nav.navigation a.button {
   font-size: 15px;
 }
 
-.powerby {
-  margin: 20px auto;
-  font-size: 13px;
-}
-
 #footer .split {
   cursor: pointer;
 }
@@ -250,7 +188,7 @@ nav.navigation a.button {
 #footer .split:hover path {
   fill: var(--accent-color);
   transition: 0.7s ease-out;
-  cursor: pointer;;
+  cursor: pointer;
 }
 
 #social a {
@@ -265,64 +203,81 @@ nav.navigation a.button {
 
 /* profile  */
 
-.profile {
+#profile {
   margin: 60px auto 0 auto;
   text-align: center;
 }
 
-.profile .avatar {
-  display: inline-block;
+#profile .avatar {
   width: 80px;
   height: 80px;
   border-radius: 50%;
 }
 
-.profile h1 {
+#profile h1 {
   font-weight: 400;
-  letter-spacing: 0px;
   font-size: 20px;
-  color: var(--separator);
+  color: var(--border);
   margin-bottom: 0;
   margin-top: 0;
 }
 
-.profile h2 {
+#profile h2 {
   font-size: 20px;
   font-weight: 300;
-  color: var(--separator);
+  color: var(--border);
   margin-top: 0;
 }
 
-/* index post list */
-#list-page {
+/* tages, shown on index page, article */
+
+.tags {
+  /*margin-top: 24px;*/
+}
+
+.tags a {
+  background: var(--background-secondary);
+  border: 1px solid var(--border);
+  padding: 2px 4px;
+  color: var(--text-secondary);
+  font-size: 14px;
+  margin-right: 4px;
+}
+
+.tags a:hover {
+  color: var(--accent-color-light);
+}
+
+/* index article list */
+#article-list {
   max-width: 580px;
   margin: 0 auto;
   padding: 0 24px;
 }
 
-#list-page .item {
+#article-list .item {
   margin: 12px 0;
 }
 
-#list-page .title {
+#article-list .title {
   display: inline-block;
-  color: var(--separator);
+  color: var(--border);
   font-size: 20px;
   font-weight: 400;
   margin: 0;
   width: 80%;
 }
 
-#list-page .title a {
+#article-list .title a {
   color: #404040;
   display: block;
 }
 
-#list-page .title a:hover {
+#article-list .title a:hover {
   color: var(--accent-color);
 }
 
-#list-page .date {
+#article-list .date {
   width: 20%;
   float: right;
   text-align: right;
@@ -331,104 +286,70 @@ nav.navigation a.button {
   color: var(--accent-color);
 }
 
-#list-page .summary {
-  color: var(--separator);
+#article-list .summary {
+  color: var(--border);
   margin-top: 12px;
   word-break: normal;
   overflow-wrap: anywhere;
   margin-bottom: 36px;
 }
 
-#list-page .cover {
-  width: 100px;
-  height: 100px;
-  background: var(--background);
+#article-list hr {
+  display: block;
+  border: none;
+  height: 2px;
+  margin: 40px auto;
+  background: var(--background-secondary);
 }
 
-#list-page .cover img {
-  width: 100%;
-  text-align: center;
-}
-
-#list-page .pagination {
+#article-list .pagination {
   margin: 48px 0;
   width: 100%;
   height: 32px;
 }
 
-#list-page .pagination .pre {
+#article-list .pagination .pre {
   float: left;
 }
 
-#list-page .pagination .next {
+#article-list .pagination .next {
   float: right;
 }
 
-/* single page */
-#single {
+/* article page */
+#article {
   max-width: 680px;
   margin: 60px auto 0 auto;
   padding: 0 64px;
 }
 
-#single .title {
+#article .title {
   text-align: center;
   font-size: 32px;
   font-weight: 400;
   line-height: 48px;
 }
 
-@media (max-width: 700px) {
-  #single {
-    padding: 0 18px;
-    margin: 20px auto 0 auto;
-  }
-
-  #single .title {
-    font-size: 24px;
-    line-height: 32px;
-  }
-}
-
-#single .tip {
+#article .meta {
   text-align: center;
-  color: var(--separator);
+  color: var(--border);
   margin-top: 18px;
   font-size: 14px;
 }
 
-#single .tip .split {
+#article .meta .separator {
   margin: 0 4px;
 }
 
-#single .content {
+#article .content {
   margin-top: 36px;
 }
 
-#single .tags {
-  margin-top: 24px;
-}
-
-#single .tags a {
-  background: var(--background);
-  padding: 4px 7px;
-  color: var(--separator);
-  font-size: 14px;
-  margin-right: 3px;
-}
-
-#single .tags a:hover {
-  color: var(--accent-color-light);
-}
-
+/* article page */
 #archive {
   max-width: 580px;
   margin: 0 auto;
   padding: 0 24px;
-}
-
-#archive .total {
-  font-size: 15px;
 }
 
 #archive .group {
@@ -469,55 +390,22 @@ nav.navigation a.button {
   margin-left: 7px;
 }
 
-#archive .group .value .tags a {
-  background: var(--background);
-  padding: 4px 7px;
-  color: var(--text-secondary);
-  font-size: 14px;
-  margin-right: 3px;
-}
-
-#archive .group .value .tags a:hover {
-  color: var(--accent-color-light);
-}
-
 /* taxonomy */
-#tags {
+#tags-list {
   max-width: 700px;
   margin: 48px auto 0 auto;
   padding: 0 12px;
   text-align: center;
+  text-wrap: none;
 }
 
-#tags .tag {
+#tags-list .tag {
   display: inline-block;
-  margin: 7px 7px;
-}
-
-@media (max-width: 700px) {
-  #tags {
-    margin: 0 auto 0 auto;
-  }
-  #tags .tag {
-    display: inline-block;
-    margin: 4px 5px;
-  }
-}
-
-#tags .tag a {
-  background: var(--background-secondary);
-  padding: 4px 7px;
-  color: var(--accent-color-light);
-  font-size: 14px;
-  margin-right: 3px;
-}
-
-#tags .tag a:hover {
-  color: var(--accent-color-light);
+  margin-top: 8px;
 }
 
 /* section page */
-#section {
+#about {
   max-width: 580px;
   margin: 48px auto 0 auto;
   padding: 0 12px;
@@ -556,10 +444,8 @@ nav.navigation a.button {
 }
 
 #page-404 .date {
-  width: 20%;
   float: right;
   text-align: right;
   position: relative;
-  top: 1px;
-  color: var(--background);
+  color: var(--text-secondary);
 }
