--- a/themes/mini/static/css/style.css
+++ b/themes/mini/static/css/style.css
@@ -2,14 +2,24 @@
   --accent-color: #aa2434;
   --accent-color-light: #ff5959;
   --text-primary: #252525;
-  --text-secondary: #383838;
+  --text-secondary: #888888;
   --background: #EEEEEE;
   --background-secondary: #EAEAEA;
   --border: #999999;
+
+  --text-size-scaler: 4vw;
+
+  --text-size-s: 0.8rem;
+  --text-size-n: 1rem;
+  --text-size-l: 1.2rem;
+  --text-size-xl: 1.8rem;
+  --text-size-xxl: 2.5rem;
+
+  --line-height-scalar: 2;
 }
 
 body {
-  line-height: 1.5em;
+  line-height: var(--text-size-xl);
   font: normal 1.1em 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: var(--text-primary);
   background: var(--background);
@@ -36,7 +46,6 @@ table {
   width: 100%;
   margin: 40px 0;
   border-collapse: collapse;
-  line-height: 1.5em;
 }
 
 th, td {
@@ -55,20 +64,21 @@ thead th, th {
   text-align: left;
   padding: 10px 15px;
   height: 20px;
-  font-size: 13px;
+  font-size: var(--text-size-l);
+  line-height: calc(var(--text-size-l) * var(--line-height-scalar));
   font-weight: bold;
-  color: var(--border);
+  color: var(--text-secondary);
   cursor: default;
   white-space: nowrap;
-  border: 1px solid var(--background-secondary);
+  border: 1px solid var(--border);
 }
 
 tr>td {
-  border: 1px solid var(--background-secondary);
+  border: 1px solid var(--border);
 }
 
 tr:nth-child(odd)>td {
-  background: var(--background);
+  background: var(--background-secondary);
 }
 
 h1,
@@ -80,6 +90,9 @@ h3 {
 p {
   margin-block-start: 1.5em;
   margin-block-end: 1.5em;
+
+  font-size: var(--text-size-n);
+  line-height: calc(var(--text-size-n) * var(--line-height-scalar));
 }
 
 p,
@@ -141,8 +154,8 @@ nav.navigation {
 nav.navigation a {
   padding: 8px 12px;
   color: var(--accent-color-light);
-  font-size: 13px;
-  line-height: 1.35;
+  font-size: var(--text-size-l);
+  line-height: calc(var(--text-size-l) * var(--line-height-scalar));
   border-radius: 3px;
 }
 
@@ -173,12 +186,12 @@ nav.navigation a.button {
   margin-bottom: 100px;
   text-align: center;
   color: var(--text-secondary);
-  font-size: 14px;
+  font-size: var(--text-size-s);
+  line-height: calc(var(--text-size-s) * var(--line-height-scalar));
 }
 
 #footer .copyright {
   margin: 20px auto;
-  font-size: 15px;
 }
 
 #footer .split {
@@ -216,14 +229,16 @@ nav.navigation a.button {
 
 #profile h1 {
   font-weight: 400;
-  font-size: 20px;
+  font-size: var(--text-size-xxl);
+  line-height: calc(var(--text-size-xxl) * var(--line-height-scalar));
   color: var(--border);
   margin-bottom: 0;
   margin-top: 0;
 }
 
 #profile h2 {
-  font-size: 20px;
+  font-size: var(--text-size-l);
+  line-height: calc(var(--text-size-l) * var(--line-height-scalar));
   font-weight: 300;
   color: var(--border);
   margin-top: 0;
@@ -240,7 +255,8 @@ nav.navigation a.button {
   border: 1px solid var(--border);
   padding: 2px 4px;
   color: var(--text-secondary);
-  font-size: 14px;
+  font-size: var(--text-size-s);
+  line-height: calc(var(--text-size-s) * var(--line-height-scalar));
   margin-right: 4px;
 }
 
@@ -262,7 +278,8 @@ nav.navigation a.button {
 #article-list .title {
   display: inline-block;
   color: var(--border);
-  font-size: 20px;
+  font-size: var(--text-size-xl);
+  line-height: calc(var(--text-size-xl) * var(--line-height-scalar));
   font-weight: 400;
   margin: 0;
   width: 80%;
@@ -287,7 +304,7 @@ nav.navigation a.button {
 }
 
 #article-list .summary {
-  color: var(--border);
+  color: var(--text-secondary);
   margin-top: 12px;
   word-break: normal;
   overflow-wrap: anywhere;
@@ -297,9 +314,9 @@ nav.navigation a.button {
 #article-list hr {
   display: block;
   border: none;
-  height: 2px;
+  height: 1px;
   margin: 40px auto;
-  background: var(--background-secondary);
+  background: var(--border);
 }
 
 #article-list .pagination {
@@ -325,16 +342,17 @@ nav.navigation a.button {
 
 #article .title {
   text-align: center;
-  font-size: 32px;
+  font-size: var(--text-size-xxl);
+  line-height: calc(var(--text-size-xxl) * var(--line-height-scalar));
   font-weight: 400;
-  line-height: 48px;
 }
 
 #article .meta {
   text-align: center;
   color: var(--border);
   margin-top: 18px;
-  font-size: 14px;
+  font-size: var(--text-size-n);
+  line-height: calc(var(--text-size-n) * var(--line-height-scalar));
 }
 
 #article .meta .separator {
@@ -357,13 +375,15 @@ nav.navigation a.button {
 }
 
 #archive .group .key {
-  font-size: 20px;
+  font-size: var(--text-size-l);
+  line-height: calc(var(--text-size-l) * var(--line-height-scalar));
   margin-bottom: 12px;
 }
 
 #archive .group .value {
   display: block;
-  font-size: 16px;
+  font-size: var(--text-size-l);
+  line-height: calc(var(--text-size-l) * var(--line-height-scalar));
   margin-bottom: 12px;
 }
 
@@ -425,7 +445,8 @@ nav.navigation a.button {
 #page-404 .title {
   display: inline-block;
   color: #404040;
-  font-size: 15px;
+  font-size: var(--text-size-xxl);
+  line-height: calc(var(--text-size-xxl) * var(--line-height-scalar));
   font-weight: 400;
   margin: 0;
   width: 80%;
@@ -438,7 +459,8 @@ nav.navigation a.button {
 
 #page-404 .read-more {
   font-weight: 300;
-  font-size: 20px;
+  font-size: var(--text-size-l);
+  line-height: calc(var(--text-size-l) * var(--line-height-scalar));
   margin-top: 48px;
   margin-bottom: 12px;
 }
