--- a/themes/mini/layouts/partials/profile.html
+++ b/themes/mini/layouts/partials/profile.html
@@ -7,7 +7,7 @@
         <img class="avatar" alt="avatar" src="{{ "/images/avatar.png" | relURL }}" />
     {{ end }}
 
-    <h1>{{ .Site.Title }}</h1>
+    <h1 class="title">{{ .Site.Title }}</h1>
 
     {{ with .Site.Params.Bio }}
       <h2>{{ . | markdownify }}</h2>
