--- a/themes/mini/layouts/partials/navigation.html
+++ b/themes/mini/layouts/partials/navigation.html
@@ -13,10 +13,10 @@
 	{{ end }}
 
 	{{ if .Site.Params.enableRSS }}
-	  <a
-      class="button"
-      href="{{ .Site.RSSLink }}">
-        {{ with .Site.Params.subscribe }}{{ . }}{{ else }}{{ i18n "subscribe" }}{{ end }}
-      </a>
+  <a
+    href="{{ .Site.RSSLink }}">
+    {{ partial "svgs/rss.svg" }}
+    {{ with .Site.Params.subscribe }}{{ . }}{{ else }}{{ i18n "subscribe" }}{{ end }}
+  </a>
 	{{ end }}
 </nav>
