--- a/themes/mini/static/css/style.css
+++ b/themes/mini/static/css/style.css
@@ -99,11 +99,6 @@ thead th, th {
   thead th, th {
     padding: var(--space-xs) var(--space-s);
   }
-
-  nav.navigation a.button {
-    margin-left: var(--space-xs);
-    padding: var(--space-xs) var(--space-xs);
-  }
 }
 
 tr>td {
@@ -187,6 +182,7 @@ nav.navigation {
 nav.navigation a {
   padding: var(--space-s) var(--space-n);
   color: var(--accent-color-light);
+  fill: var(--accent-color-light);
   font-size: var(--text-size-l);
   line-height: calc(var(--text-size-l) * var(--line-height-scalar));
   border-radius: 3px;
@@ -194,12 +190,11 @@ nav.navigation a {
 
 nav.navigation a:hover {
   color: var(--accent-color);
+  fill: var(--accent-color);
 }
 
-nav.navigation a.button {
-  background: var(--accent-color-light);
-  color: var(--background);
-  margin-left: var(--space-l);
+nav.navigation a svg {
+  width: 16px;
 }
 
 @media (max-width: 700px) {
@@ -210,11 +205,6 @@ nav.navigation a.button {
 
   nav.navigation a {
     padding: var(--space-xs) var(--space-xxs);
-  }
-
-  nav.navigation a.button {
-    margin-left: var(--space-xs);
-    padding: var(--space-xs) var(--space-xs);
   }
 }
 
