--- a/themes/mini/static/css/style.css
+++ b/themes/mini/static/css/style.css
@@ -194,7 +194,8 @@ nav.navigation a:hover {
 }
 
 nav.navigation a svg {
-  width: 16px;
+  margin-left: var(--space-n);
+  width: calc(var(--text-size-l) * 0.7);
 }
 
 @media (max-width: 700px) {
@@ -291,9 +292,7 @@ nav.navigation a svg {
 
 /* tages, shown on index page, article */
 
-.tags {
-  /*margin-top: 24px;*/
-}
+.tags {}
 
 .tags a {
   background: var(--background-secondary);
