--- a/themes/mini/layouts/_default/baseof.html
+++ b/themes/mini/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ $.Site.LanguageCode | default "en" }}">
+<html lang="{{ $.Site.LanguageCode | default "en-gb" }}">
   <head>
     <title>{{ block "title" . }}{{ with .Params.Title }}{{ . }} | {{ end }}{{ .Site.Title }}{{ end }}</title>
 
@@ -13,7 +13,7 @@
     <main class="main">
       {{ block "main" . }}{{ end }}
     </main>
-    
+
     {{ partial "footer.html" . }}
   </body>
 </html>
