--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -1,4 +1,4 @@
-/*:root {*/
-/*  --accent-color: green;*/
-/*  --accent-color-light: black;*/
-/*}*/
+:root {
+  --accent-color: #8e24aa;
+  --accent-color-light: #ab47bc;
+}
